# led-hourglass

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
android/: AndroidManifest.xml  build.gradle
qml/: HourglassView.qml  Main.qml
resources/: led-hourglass.desktop
src/: gravity_source.cpp  gravity_source.h  hourglass_item.cpp  hourglass_item.h  hourglass_sim.cpp  hourglass_sim.h  main.cpp  pixel_dust.cpp  pixel_dust.h
